Preparando requisições que serão enviadas ao backend

--- a/frontEnd/templates.html
+++ b/frontEnd/templates.html
@@ -48,16 +48,9 @@
     </a>
   </div>
 
-
-  <!-- Marketing messaging and featurettes
-  ================================================== -->
-  <!-- Wrap the rest of the page in another container to center all the content. -->
-
   <!-- Aqui é a home, colocar informações gerais sobre os projetos que estão em desenvolvimento. Descrever um pouco sobre eles e adicionar fotos referentes a ele -->
   <div class="container marketing" data-spy="scroll" data-target="#navbar" style="position: relative; overflow: auto; height: auto; ">
 
-
-    <!-- START THE FEATURETTES -->
 
     <div class="row featurette">
       <div class="col-md-7">
@@ -118,9 +111,7 @@
 
     <hr class="featurette-divider">
 
-    <!-- /END THE FEATURETTES -->
-
-  </div><!-- /.container -->
+  </div>
 </template>
 
 <template id="login">
@@ -143,7 +134,7 @@
             <input type="checkbox" value="remember-me"> Lembrar de mim
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" style="background-color: #191140;">Login</button>
+        <button id="sendLogin" class="btn btn-lg btn-primary btn-block" type="submit" style="background-color: #191140;">Login</button>
         <p class="mt-5 mb-3 text-muted">© 2020</p>
     </form>
   </div>
@@ -165,7 +156,7 @@
       <div class="form-group">
         <input type="password" class="form-control" id="inputPassword" placeholder="Senha">
       </div>
-      <button type="submit" class="btn btn-lg btn-primary btn-block" style="background-color: #191140;">Cadastrar</button>
+      <button id="registerSend" type="submit" class="btn btn-lg btn-primary btn-block" style="background-color: #191140;">Cadastrar</button>
       </div>
     </form>
 </template>
